--- a/resume.tex
+++ b/resume.tex
@@ -3,3 +3,13 @@
 \moderncvcolor{blue}
 \usepackage[scale=0.85]{geometry}
 \usepackage{etoolbox}
+
+% personal data
+\name{Prankur}{Verma}
+\title{Embedded enthusiast}
+\address{DH 85 Pallav Puram Phase-1}{Meerut-250001}
+\mobile{(+91) 8077828826}
+\email{vprankur@gmail.com}
+\social[linkedin]{prankur-verma}
+\social[github]{prankurverma}
+\social[twitter]{pranks_verma}
