--- a/resume.tex
+++ b/resume.tex
@@ -73,13 +73,12 @@
   \ Github: \href{https://github.com/prankurverma}{@prankurverma}\\
 \end{tabular*}
 
-
 %-----------EDUCATION-----------------
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
       {JSS Academy of Technical Education}{Delhi/Noida, India}
-      {Bachelor of Engineering in Electronics and Communication;  CGPA: 8.2/10.0}{July. 2015 -- Present}
+      {Bachelor of Engineering in Electronics and Communication;  CGPA: 8.2/10.0}{July, 2015 -- May, 2019 (exp.)}
     \resumeSubheading
       {Dayawati Modi Academy}{Meerut, UP, India}
       {Intermediate 10+2 CBSE;  CGPA: 9.0/10.0}{2013 -- 2014}
@@ -88,41 +87,28 @@
       {High school CBSE;  CGPA: 9.5/10.0}{2011 -- 2012}
   \resumeSubHeadingListEnd
 
-
 %-----------ACHIEVEMENTS-----------------
-\section{Academic Achievements}
+\section{Achievements}
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {IIT Bombay}{Mumbai, India}
-      {National e-Yantra Robotics Competition}{Aug, 2017 - Mar, 2018}
+      {National e-Yantra Robotics Competition}{Mumbai, India}
+      {IIT Bombay}{Aug, 2017 - Mar, 2018}
       \resumeItemListStart
-        \resumeItem{Position}
-          {theme}
+        \resumeItem{Outcome}
+          {Stood 4th (amongst 202 teams with 4 members each) in the finals of the National Robotics Competition}
         \resumeItem{Apache Beam}
           {Apache Beam is a unified model for defining both batch and streaming data-parallel processing pipelines, as well as a set of language-specific SDKs for constructing pipelines and runners.}
       \resumeItemListEnd
 
     \resumeSubheading
-      {Coursera}{Mountain View, CA}
-      {Senior Software Engineer}{Jan 2014 - Oct 2016}
+      {National Convention on Quality Control Circle}{Madurai, India}
+      {Senior Software Engineer}{July, 2010 - Mar, 2011}
       \resumeItemListStart
-        \resumeItem{Notifications}
-          {Service for sending email, push and in-app notifications. Involved in features such as delivery time optimization, tracking, queuing and A/B testing. Built an internal app to run batch campaigns for marketing etc.}
+        \resumeItem{Outcome}
+          {: Stood 3rd in the Case study and presentation of assessment done in school.}
         \resumeItem{Nostos}
           {Bulk data processing and injection service from Hadoop to Cassandra and provides a thin REST layer on top for serving offline computed data online.}
-        \resumeItem{Workflows}
-          {Dataduct an open source workflow framework to create and manage data pipelines leveraging reusables patterns to expedite developer productivity.}
-        \resumeItem{Data Collection}
-          {Designed the internal survey and crowd sourcing platfowm which allowed for creating various tasks for crowd sourding or embedding surveys across the Coursera platform.}
-        \resumeItem{Dev Environment}
-          {Analytics environment based on docker and AWS, standardized the python and R dependencies. Wrote the core libraries that are shared by all data scientists.}
-        \resumeItem{Data Warehousing}
-          {Setup, schema design and management of Amazon Redshift. Built an internal app for access to the data using a web interface. Dataduct integration for daily ETL injection into Redshift.}
-        \resumeItem{Recommendations}
-          {Core service for all recommendation systems at Coursesa, currently used on the homepage and throughout the content discovery process. Worked on both offline training and online serving.}
-        \resumeItem{Content Discovery}
-          {Improved content discovery by building a new onboarding experience on coursera. Using this to personalize the search and browse experience. Also worked on ranking and indexing improvements.}
         \resumeItem{Course Dashboards}
           {Instructor dashboards and learner surveying tools, which helped instructors run their class better by providing data on Assignments and Learner Activity.}
       \resumeItemListEnd
@@ -149,6 +135,15 @@
 
   \resumeSubHeadingListEnd
 
+%--------Technical SKILLS------------
+\section{Technical Skills}
+  \resumeSubHeadingListStart
+    \item{
+      \textbf{Languages}{: C/C++, Python, Javascript, Latex, Verilog/VHDL}
+      \hfill
+      \item{\textbf{Technologies}{: ROS, MATLAB, OpenCV, AWS, GCP}}
+    }
+  \resumeSubHeadingListEnd
 
 %-----------PROJECTS-----------------
 \section{Projects}
@@ -196,7 +191,6 @@
         \resumeItem{Teaching Assistant - Computational Investing}
           {The online course on Coursera, had more than 100,000 students enrolled. It was featured on the 11 Alive News and the Atlanta Journal Constitution. Involved in creating assignment, exams and conducting recitation sessions. Also taught the on-campus version of the course.}
       \resumeItemListEnd
-
   \resumeSubHeadingListEnd
 
 %-----------CERTIFICATION-----------------
@@ -234,17 +228,6 @@
       \resumeItemListEnd
 
   \resumeSubHeadingListEnd
-%
-%--------PROGRAMMING SKILLS------------
-%\section{Programming Skills}
-%  \resumeSubHeadingListStart
-%    \item{
-%      \textbf{Languages}{: Scala, Python, Javascript, C++, SQL, Java}
-%      \hfill
-%      \textbf{Technologies}{: AWS, Play, React, Kafka, GCE}
-%    }
-%  \resumeSubHeadingListEnd
-
 
 %-------------------------------------------
 \end{document}
