--- a/resume.tex
+++ b/resume.tex
@@ -96,9 +96,9 @@
       {IIT Bombay}{Aug, 2017 - Mar, 2018}
       \resumeItemListStart
         \resumeItem{Outcome}
-          {Stood 4th (amongst 202 teams with 4 members each) in the finals of the National Robotics Competition}
-        \resumeItem{Apache Beam}
-          {Apache Beam is a unified model for defining both batch and streaming data-parallel processing pipelines, as well as a set of language-specific SDKs for constructing pipelines and runners.}
+          {Secured \textbf{4\textsuperscript{th}} position in the finals}
+        \resumeItem{About}
+          {Conducted by IIT Bombay, sponsored by \textbf{MHRD} through NMEICT. The finals was held at IIT-Bombay in which over 200+ teams participated in a total of 4 themes}
       \resumeItemListEnd
 
     \resumeSubheading
@@ -106,11 +106,8 @@
       {Senior Software Engineer}{July, 2010 - Mar, 2011}
       \resumeItemListStart
         \resumeItem{Outcome}
-          {: Stood 3rd in the Case study and presentation of assessment done in school.}
-        \resumeItem{Nostos}
-          {Bulk data processing and injection service from Hadoop to Cassandra and provides a thin REST layer on top for serving offline computed data online.}
-        \resumeItem{Course Dashboards}
-          {Instructor dashboards and learner surveying tools, which helped instructors run their class better by providing data on Assignments and Learner Activity.}
+          {: Stood \textbf{3\textsuperscript{rd}} in the Case study and presentation.}
+        \resumeItem{About}{The main objective of the event is to do a thorough study of the problems faced by students at school-level.Several key elements used were Pareto-analysis, 6-sigma method Brainstorming, Questionaires.Finally we give a detailed presentation at event venue in Madurai, Tamil Nadu where several renowned persons were there like: Mr. Anand Kumar (Super30 programme founder), etc.}
       \resumeItemListEnd
 
     \resumeSubheading
