--- a/resume.tex
+++ b/resume.tex
@@ -66,6 +66,7 @@
 
 \begin{document}
 
+
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
   \textbf{\href{http://prankurverma.github.io/resume/}{\Large Prankur Verma}} & Email : \href{mailto:vprankur@gmail.com}{vprankur@gmail.com}\\
@@ -81,7 +82,7 @@
       {Bachelor of Engineering in Electronics and Communication;  CGPA: 8.2/10.0}{July, 2015 -- May, 2019 (exp.)}
     \resumeSubheading
       {Dayawati Modi Academy}{Meerut, UP, India}
-      {Intermediate 10+2 CBSE;  CGPA: 9.0/10.0}{2013 -- 2014}
+      {Intermediate 10+2 CBSE;  CGPA: 9.5/10.0}{2013 -- 2014}
     \resumeSubheading
       {Dayawati Modi Academy}{Meerut, UP, India}
       {High school CBSE;  CGPA: 9.5/10.0}{2011 -- 2012}
@@ -90,7 +91,6 @@
 %-----------ACHIEVEMENTS-----------------
 \section{Achievements}
   \resumeSubHeadingListStart
-
     \resumeSubheading
       {National e-Yantra Robotics Competition}{Mumbai, India}
       {IIT Bombay}{Aug, 2017 - Mar, 2018}
@@ -98,7 +98,7 @@
         \resumeItem{Outcome}
           {Secured \textbf{4\textsuperscript{th}} position in the finals}
         \resumeItem{About}
-          {Conducted by IIT Bombay, sponsored by \textbf{MHRD} through NMEICT. The finals was held at IIT-Bombay in which over 200+ teams participated in a total of 4 themes}
+          {Conducted by IIT Bombay, sponsored by \textbf{MHRD, India} through NMEICT. The finals was held at IIT-Bombay in which over \textbf{200+ teams} participated in a total of 4 themes}
       \resumeItemListEnd
 
     \resumeSubheading
@@ -107,27 +107,7 @@
       \resumeItemListStart
         \resumeItem{Outcome}
           {: Stood \textbf{3\textsuperscript{rd}} in the Case study and presentation.}
-        \resumeItem{About}{The main objective of the event is to do a thorough study of the problems faced by students at school-level.Several key elements used were Pareto-analysis, 6-sigma method Brainstorming, Questionaires.Finally we give a detailed presentation at event venue in Madurai, Tamil Nadu where several renowned persons were there like: Mr. Anand Kumar (Super30 programme founder), etc.}
-      \resumeItemListEnd
-
-    \resumeSubheading
-      {Lucena Research}{Atlanta, GA}
-      {Data Scientist}{Summer 2012 and 2013}
-      \resumeItemListStart
-        \resumeItem{Portfolio Management}
-          {Created models for portfolio hedging,  portfolio optimization and price forecasting. Also creating a strategy backtesting engine used for simulating and backtesting strategies.}
-        \resumeItem{QuantDesk}
-          {Python backend for a web application used by hedge fund managers for portfolio management.}
-      \resumeItemListEnd
-
-    \resumeSubheading
-      {Georgia Institute of Technology}{Atlanta, CA}
-      {Research and Teaching Assistant}{Jan 2012 - Dec 2013}
-      \resumeItemListStart
-        \resumeItem{Research Assistant - Machine Learning}
-          {Research on machine learning for portfolio hedging and replication algorithms. Modeling low-risk \& continuous-return strategies. Developed the python library QSTK.}
-        \resumeItem{Teaching Assistant - Computational Investing}
-          {The online course on Coursera, had more than 100,000 students enrolled. It was featured on the 11 Alive News and the Atlanta Journal Constitution. Involved in creating assignment, exams and conducting recitation sessions. Also taught the on-campus version of the course.}
+        \resumeItem{About}{The main objective of the event is to do a thorough study of the problems faced by students at school-level.Several key elements used were Pareto-analysis, 6-sigma method Brainstorming, Questionnaires.Finally we give a detailed presentation at event venue in Madurai, Tamil Nadu where several renowned persons were there like: Mr. Anand Kumar (Super30 program founder), etc.}
       \resumeItemListEnd
 
   \resumeSubHeadingListEnd
@@ -135,30 +115,26 @@
 %--------Technical SKILLS------------
 \section{Technical Skills}
   \resumeSubHeadingListStart
-    \item{
-      \textbf{Languages}{: C/C++, Python, Javascript, Latex, Verilog/VHDL}
+    \item{\textbf{Languages}{: C/C++, Python, JavaScript, Latex, Verilog/VHDL}
       \hfill
-      \item{\textbf{Technologies}{: ROS, MATLAB, OpenCV, AWS, GCP}}
+      \item{\textbf{Technologies}{: OpenCV, ROS, MATLAB, Perception \& Control}}
     }
   \resumeSubHeadingListEnd
 
 %-----------PROJECTS-----------------
 \section{Projects}
   \resumeSubHeadingListStart
-    \resumeSubItem{QuantSoftware Toolkit}
-      {Open source python library for financial data analysis and machine learning for finance.}
-    \resumeSubItem{Github Visualization}
-      {Data Visualization of Git Log data using D3 to analyze project trends over time.}
-    \resumeSubItem{Recommendation System}
-      {Music and Movie recommender systems using collaborative filtering on public datasets.}
-    \resumeSubItem{Mac Setup}
-      {Book that gives step by step instructions on setting up developer environment on Mac OS.}
+        \resumeItem{Chaser Drone}{(Dec, 2017 - Mar, 2018)e-Yantra Robotics Competition-17}
+        \resumeItem{Project2}{(Dec, 2017 - Mar, 2018)}
+        \resumeItem{Project3}{(Dec, 2017 - Mar, 2018)}
+        \resumeItem{Project4}{(Dec, 2017 - Mar, 2018)}
+        \resumeItem{Project5}{(Dec, 2017 - Mar, 2018)}
+        \resumeItem{Hand Detection and Tracking}{(Dec, 2017 - Mar, 2018)This aims to detect human hand and track its motion.I further extended it to simulate keyboard/mouse events using hand motion, i.e.,}
   \resumeSubHeadingListEnd
-
+\newpage
 %-----------EXPERIENCE-----------------
 \section{Experience}
   \resumeSubHeadingListStart
-
     \resumeSubheading
       {Bot-Labs Dynamics, IIT Delhi}{Delhi, India}
       {Embedded Systems Intern}{(6 months) Jul, 2018 - Dec, 2018}
@@ -170,8 +146,8 @@
       \resumeItemListEnd
 
     \resumeSubheading
-      {Lucena Research}{Atlanta, GA}
-      {Data Scientist}{Summer 2012 and 2013}
+      {National Informatics Centre (NIC)}{New Delhi, India}
+      {Data Analyst Trainee/Intern}{(6 weeks) Jun, 2018 - Jul, 2018}
       \resumeItemListStart
         \resumeItem{Portfolio Management}
           {Created models for portfolio hedging,  portfolio optimization and price forecasting. Also creating a strategy backtesting engine used for simulating and backtesting strategies.}
@@ -180,8 +156,8 @@
       \resumeItemListEnd
 
     \resumeSubheading
-      {Georgia Institute of Technology}{Atlanta, CA}
-      {Research and Teaching Assistant}{Jan 2012 - Dec 2013}
+      {Feeding India}{New Delhi, India}
+      {Volunteer}{Feb, 2018 - Aug, 2018}
       \resumeItemListStart
         \resumeItem{Research Assistant - Machine Learning}
           {Research on machine learning for portfolio hedging and replication algorithms. Modeling low-risk \& continuous-return strategies. Developed the python library QSTK.}
@@ -193,38 +169,35 @@
 %-----------CERTIFICATION-----------------
 \section{Certification}
   \resumeSubHeadingListStart
-
     \resumeSubheading
       {Coursera}{\href{https://coursera.org}{[link]}}
-      {National E-yantra Robotics Competition}{Aug, 2017 - Mar, 2018}
+      {Robotics - University of Pennsylvania}{}
       \resumeItemListStart
-        \resumeItem{Tensorflow}
-          {TensorFlow is an open source software library for numerical computation using data flow graphs; primarily used for training deep learning models.}
-        \resumeItem{Apache Beam}
-          {Apache Beam is a unified model for defining both batch and streaming data-parallel processing pipelines, as well as a set of language-specific SDKs for constructing pipelines and runners.}
+        \resumeItem{}
+          {Aerial Robotics, Computational motion planning, Mobility, Perception, Estimation and Learning, Capstone.
+          use mathematical and programming methods that researchers use in robotics labs}
+        \resumeItem{}{}
+          {Basics, Data Structures, Access Web Data.}
       \resumeItemListEnd
-
     \resumeSubheading
-      {Lucena Research}{Atlanta, GA}
-      {Data Scientist}{Summer 2012 and 2013}
+      {Coursera}{\href{https://www.coursera.org/account/accomplishments/certificate/SWCNNDVNW9Y9}{[link]}}
+      {Python - University of Michigan}{}
       \resumeItemListStart
         \resumeItem{Portfolio Management}
           {Created models for portfolio hedging,  portfolio optimization and price forecasting. Also creating a strategy backtesting engine used for simulating and backtesting strategies.}
         \resumeItem{QuantDesk}
           {Python backend for a web application used by hedge fund managers for portfolio management.}
       \resumeItemListEnd
-
-    \resumeSubheading
-      {Georgia Institute of Technology}{Atlanta, CA}
-      {Research and Teaching Assistant}{Jan 2012 - Dec 2013}
-      \resumeItemListStart
-        \resumeItem{Research Assistant - Machine Learning}
-          {Research on machine learning for portfolio hedging and replication algorithms. Modeling low-risk \& continuous-return strategies. Developed the python library QSTK.}
-        \resumeItem{Teaching Assistant - Computational Investing}
-          {The online course on Coursera, had more than 100,000 students enrolled. It was featured on the 11 Alive News and the Atlanta Journal Constitution. Involved in creating assignment, exams and conducting recitation sessions. Also taught the on-campus version of the course.}
-      \resumeItemListEnd
-
   \resumeSubHeadingListEnd
-
 %-------------------------------------------
+
+%-----------Coursework-----------------
+\section{Coursework}
+  \resumeSubHeadingListStart
+      \resumeItemListStart
+        \item{Digital Logic Circuits}
+        \item{Control Systems, Data Structures, Engineering Mathematics, Network analysis and synthesis, Electronic Circuits, Microprocessors, Principles of Communication, Signals and System, Integrated Circuits, Digital Signal Processing, VLSI, Digital design using Verilog, VHDL}
+      \resumeItemListEnd
+  \resumeSubHeadingListEnd
+    
 \end{document}
