added tex file updates

--- a/resume.tex
+++ b/resume.tex
@@ -100,10 +100,20 @@
         \resumeItem{Highlights}
           {Conducted by IIT Bombay, sponsored by \textbf{MHRD, India} through NMEICT. The finals was held at IIT-Bombay in which over \textbf{200+ teams} participated in a total of 4 themes}
       \resumeItemListEnd
+      
+    %\resumeSubheading
+    %  {India Innovation Challenge Design Contest (IICDC) - 2018}{India}
+    %  {www.mygov.in}{Jun, 2018 - Aug, 2019}
+    %  \resumeItemListStart
+    %    \resumeItem{Outcome}
+    %      {Made it to Quarter Finals and Proposed idea got approved. The idea is in incubation phase and will be proceeded further.}
+    %    \resumeItem{Highlights}
+    %      {Organized and sponsored by Texas Instruments (TI) in collaboration with Department of Science and Technology (DST), India. Here, we provided an idea for a real-world problem with the objective of practical implementation on basis of business potential and technical innovation.}
+    %  \resumeItemListEnd
 
     \resumeSubheading
       {National Convention on Quality Control Circle}{Madurai, India}
-      {Senior Software Engineer}{July, 2010 - Mar, 2011}
+      {Participant for Case-study}{July, 2010 - Mar, 2011}
       \resumeItemListStart
         \resumeItem{Outcome}
           {: Stood \textbf{3\textsuperscript{rd}} in the Case study and presentation.}
@@ -125,6 +135,8 @@
   \resumeSubHeadingListEnd
 %------------------------------------ 
 
+\newpage
+
 %--------Technical SKILLS------------
 \section{Technical Skills}
   \resumeSubHeadingListStart
@@ -133,8 +145,6 @@
       \item{\textbf{Technologies}{: OpenCV, ROS, MATLAB, OrCAD, Perception \& Control, Linux}}
   \resumeSubHeadingListEnd
 %------------------------------------  
-  
-\newpage
 
 %-----------EXPERIENCE---------------
 \section{Experience}
@@ -171,7 +181,7 @@
       
     \resumeSubheading
       {MATLAB Helper}{Haryana, India}
-      {MATLAB developer/intern}{(4 months) Jun, 2017 - Oct, 2017}
+      {MATLAB Developer/Intern}{(4 months) Jun, 2017 - Oct, 2017}
       \resumeItemListStart
         \resumeItem{Outcome}
           {Gained instrumental knowledge in MATLAB-Image processing toolbox and contributed to the Digital Passport Recognition.}
@@ -217,7 +227,7 @@
 \section{Other Information}
   \resumeSubHeadingListStart
       \resumeItemListStart
-        \resumeItem{Hobbies}{Skate-boarding, badminton, guitar \& music}
+        \resumeItem{Hobbies}{Skate-boarding, badminton, reading, guitar \& music}
         \resumeItem{Soft skills}{Communication, Time Management, Decision Making, Problem Solving.}
         \resumeItem{Language}{English, Hindi}
       \resumeItemListEnd
