--- a/resume.tex
+++ b/resume.tex
@@ -142,7 +142,7 @@
   \resumeSubHeadingListStart
     \item{\textbf{Languages}{: C/C++, Python, JavaScript, Latex, Verilog/VHDL}}
       \hfill
-      \item{\textbf{Technologies}{: OpenCV, ROS, MATLAB, OrCAD, Perception \& Control, Linux}}
+      \item{\textbf{Technologies}{: OpenCV, ROS, MATLAB, OrCAD, Perception \& Control, Git/ Github, Linux}}
   \resumeSubHeadingListEnd
 %------------------------------------  
 
