--- a/resume.tex
+++ b/resume.tex
@@ -101,15 +101,15 @@
           {Conducted by IIT Bombay, sponsored by \textbf{MHRD, India} through NMEICT. The finals was held at IIT-Bombay in which over \textbf{200+ teams} participated in a total of 4 themes}
       \resumeItemListEnd
       
-    %\resumeSubheading
-    %  {India Innovation Challenge Design Contest (IICDC) - 2018}{India}
-    %  {www.mygov.in}{Jun, 2018 - Aug, 2019}
-    %  \resumeItemListStart
-    %    \resumeItem{Outcome}
-    %      {Made it to Quarter Finals and Proposed idea got approved. The idea is in incubation phase and will be proceeded further.}
-    %    \resumeItem{Highlights}
-    %      {Organized and sponsored by Texas Instruments (TI) in collaboration with Department of Science and Technology (DST), India. Here, we provided an idea for a real-world problem with the objective of practical implementation on basis of business potential and technical innovation.}
-    %  \resumeItemListEnd
+    \resumeSubheading
+      {India Innovation Challenge Design Contest (IICDC) - 2018}{India}
+      {www.mygov.in}{Jun, 2018 - Aug, 2019}
+      \resumeItemListStart
+        \resumeItem{Outcome}
+          {Made it to Quarter Finals and Proposed idea got approved. The idea is in incubation phase and will be proceeded further.}
+        \resumeItem{Highlights}
+          {Organized and sponsored by Texas Instruments (TI) in collaboration with Department of Science and Technology (DST), India. Here, we provided an idea for a real-world problem with the objective of practical implementation on basis of business potential and technical innovation.}
+      \resumeItemListEnd
 
     \resumeSubheading
       {National Convention on Quality Control Circle}{Madurai, India}
@@ -135,7 +135,7 @@
   \resumeSubHeadingListEnd
 %------------------------------------ 
 
-\newpage
+%\newpage
 
 %--------Technical SKILLS------------
 \section{Technical Skills}
@@ -217,7 +217,7 @@
 \section{Coursework}
   \resumeSubHeadingListStart
       \resumeItemListStart
-        \resumeItem{Core subjects}{Digital Logic Circuits, Control Systems, Data Structures, Engineering Mathematics, Network analysis and synthesis, Electronic Circuits, Microprocessors, Principles of Communication, Signals and System, Integrated Circuits, Digital Signal Processing, VLSI, Digital design using Verilog, VHDL}
+        \resumeItem{Relevant Courses}{Digital Logic Circuits, Control Systems, VLSI System Design, Embedded System Design, Microcontroller and Applications, Computer Organization and Architecture, Signals and System, Integrated Circuits, Digital Signal Processing, Digital Logic Design using Verilog and VHDL}
         \resumeItem{Others}{MATLAB+Simulink, OrCAD, PCB designing}
       \resumeItemListEnd
   \resumeSubHeadingListEnd
