added research paper

--- a/resume.tex
+++ b/resume.tex
@@ -123,13 +123,13 @@
 %------------------------------------
 
 %-----------PROJECTS-----------------
-\section{Projects}
+\section{Projects and Publications}
   \resumeSubHeadingListStart
         \resumeItem{Chaser Drone}{(Dec, 2017 - Mar, 2018) Worked on ROS, i.e., Robotic Operating System to interface with a drone using python script. Programmed the drone using feedback controlled PID algorithm. Drone had to land on a Spark-V bot(running on ground) that was programmed using Embedded C.}
         \resumeItem{Auto-tuning of controller for Drones}{(Jul, 2018 - Dec, 2018) As part of internship task, interfaced game-controller as drone controller using pyGame library, and prepared an Auto Calibrating python script for controller using PID loop. The code also has the capability to hold drone position and switch between two drones.}
         \resumeItem{Haar Cascade Face Detection and Tracking}{(Aug, 2018 - Nov, 2018) Using Haar Cascade,  created a face detection and recognition scripting code. I further extended it to hand gesture recognition, using pre-trained neural network, to simulate keyboard/mouse events using hand motion.}
         \resumeItem{Digital Passport Recognition}{(Jun, 2017 - Oct, 2018) As part of the internship project, I augmented a MATLAB code to scan and analyze passport details using MATLAB-Image Processing toolbox.}
-        \resumeItem{Mini-CNC Plotter}{(Jun, 2017 - Aug, 2018) Augmented a DIY 3-axes motorized mini-CNC plotter using household waste. It was a Arduino based device to draw complex artwork as vector gcode image. A python script to sends motion data to Arduino which actuates motors to print.}
+        \resumeItem{Mini-CNC Plotter}{(Jun, 2017 - Aug, 2018) Augmented a DIY 3-axes motorized mini-CNC plotter using household waste. It was a Arduino based device to draw complex artwork as vector gcode image. Also got a research paper published in International Journal of Computer Application (IJCA-2018) \href{https://www.ijcaonline.org/archives/volume182/number12/29871-2018917694}{[link]}}
         \resumeItem{9X9 Sudoku solver using Image Processing}{(Jan, 2017 - Feb, 2017) Laptop camera is used to get input of unsolved-Sudoku image. Then by image-to-text recognition using convolution, an array of Sudoku is prepared. Sudoku algorithm fill-in the missing places and solves the Sudoku and displays the final solution array.}
         \resumeItem{Navigate a terrain}{(Dec, 2016 - Mar, 2017) Developed a robust python code with the help of openCV library to analyze and solve different mazes, like: square and theta maze, using a Dijkstra's algorithm. A map-graph for each cell is generated using a particular algorithm and then shortest path is generated and highlighted.}
   \resumeSubHeadingListEnd
@@ -142,7 +142,7 @@
   \resumeSubHeadingListStart
     \item{\textbf{Languages}{: C/C++, Python, JavaScript, Latex, Verilog/VHDL}}
       \hfill
-      \item{\textbf{Technologies}{: OpenCV, ROS, MATLAB, OrCAD, Perception \& Control, Git/ Github, Linux}}
+      \item{\textbf{Technologies}{: OpenCV, ROS, Robotics, MATLAB, OrCAD, Perception \& Control, Git/ Github, Linux}}
   \resumeSubHeadingListEnd
 %------------------------------------  
 
@@ -218,7 +218,7 @@
   \resumeSubHeadingListStart
       \resumeItemListStart
         \resumeItem{Relevant Courses}{Digital Logic Circuits, Control Systems, VLSI System Design, Embedded System Design, Microcontroller and Applications, Computer Organization and Architecture, Signals and System, Integrated Circuits, Digital Signal Processing, Digital Logic Design using Verilog and VHDL}
-        \resumeItem{Others}{MATLAB+Simulink, OrCAD, PCB designing}
+        %\resumeItem{Others}{MATLAB+Simulink, OrCAD, PCB designing}
       \resumeItemListEnd
   \resumeSubHeadingListEnd
 %--------------------------------------
